# ML-Zoomcamp-2025

./: README.md
01-intro/.ipynb_checkpoints/: hw1-checkpoint.ipynb
02-regression/: regression.ipynb
03-classification/: hw3.ipynb
04-evaluation/: hw4.ipynb
05-deployment/: Dockerfile  README.md  predict.py
06-trees/: hw6.ipynb
08-deep-learning/: MLZoomcamp_deeplearning.ipynb
09-serverless/: Dockerfile  README.md  lambda_function.py  pyproject.toml  requirements.txt  test.ipynb  test.py
10-kubernetes/: README.md
