[project]
name = "09-serverless"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy",
    "pillow",
    "torch",
    "torchvision",
    "onnxruntime"
]

[[tool.uv.index]]
name = "pytorch-nightly-cpu"
url = "https://download.pytorch.org/whl/nightly/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-nightly-cpu" }
torchvision = { index = "pytorch-nightly-cpu" }
